fixed dark mode catalog

--- a/styles/dark-mode/catalogue.css
+++ b/styles/dark-mode/catalogue.css
@@ -8,7 +8,7 @@ table.display tbody tr:nth-child(2n) td {
 } */
 
 table {
-	width: 75%;
+	width: 80%;
 	border-collapse: collapse;
 	margin: 20px auto;
 }
@@ -44,4 +44,23 @@ tr {
 
 [data-toggle="toggle"] {
 	display: none;
+}
+
+.course {
+	margin-left: 10%;
+}
+
+.module {
+	margin-top: 2em;
+	margin-left: 10%;
+}
+
+.i1 {
+	margin-top: 1.5em;
+	margin-left: 15%;
+}
+
+.i2 {
+	margin-top:1em;
+	margin-left: 20%;
 }
